--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -264,7 +264,16 @@
   <data name="ICB_GROUP_CONFIRM" xml:space="preserve">
     <value>ICB for group subscriptions will not be applied (current limitation)</value>
   </data>
+  <data name="MTPanelLog.Text" xml:space="preserve">
+    <value>Quote Log</value>
+  </data>
   <data name="MTPanelResult.Text" xml:space="preserve">
     <value>Quote Details</value>
+  </data>
+  <data name="QuoteFailed.Label" xml:space="preserve">
+    <value>Failed message</value>
+  </data>
+  <data name="QuoteLog.Label" xml:space="preserve">
+    <value>Quote Log</value>
   </data>
 </root>
