--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.pt-br.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
     <value>{PT-BR}Operations Dashboard</value>
@@ -141,7 +141,7 @@
   <data name="NO_RUNNING_ADAPTERS_TEXT" xml:space="preserve">
     <value>{PT-BR}No Running Adapters</value>
   </data>
-   <data name="TEXT_BILL_GROUP" xml:space="preserve">
+  <data name="TEXT_BILL_GROUP" xml:space="preserve">
     <value>{PT-BR}Bill Group</value>
   </data>
   <data name="TEXT_CYCLE" xml:space="preserve">
@@ -152,23 +152,41 @@
   </data>
   <data name="TEXT_END" xml:space="preserve">
     <value>{PT-BR}End</value>
-  </data>  
+  </data>
   <data name="TEXT_INSTANCE" xml:space="preserve">
     <value>{PT-BR}Instance</value>
-  </data> 
+  </data>
   <data name="TEXT_INTERVAL_ID" xml:space="preserve">
     <value>{PT-BR}Interval ID</value>
   </data>
   <data name="TEXT_MESSAGE" xml:space="preserve">
     <value>{PT-BR}Message</value>
-  </data> 
+  </data>
   <data name="TEXT_NAME" xml:space="preserve">
     <value>{PT-BR}Name</value>
-  </data>  
+  </data>
   <data name="TEXT_START" xml:space="preserve">
     <value>{PT-BR}Start</value>
-  </data>  
+  </data>
   <data name="TEXT_STATUS" xml:space="preserve">
     <value>{PT-BR}Status</value>
-  </data> 	
+  </data>
+  <data name="pnlFailedTransactionsQueueResource.Text" xml:space="preserve">
+    <value>{PT-BR}Failed Transactions Queue</value>
+  </data>
+  <data name="TEXT_OPEN" xml:space="preserve">
+    <value>{PT-BR}Open</value>
+  </data>
+  <data name="TEXT_UNDER_INVESTIGATION" xml:space="preserve">
+    <value>{PT-BR}Under Investigation</value>
+  </data>
+  <data name="TEXT_DAYS" xml:space="preserve">
+    <value>{PT-BR}Days</value>
+  </data>
+  <data name="TEXT_LAST_BATCH" xml:space="preserve">
+    <value>{PT-BR}Last Batch</value>
+  </data>
+  <data name="TEXT_OVER" xml:space="preserve">
+    <value>{PT-BR}Over</value>
+  </data>
 </root>
