--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.en-GB.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.en-GB.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
     <value>Operations Dashboard</value>
@@ -141,7 +141,7 @@
   <data name="NO_RUNNING_ADAPTERS_TEXT" xml:space="preserve">
     <value>No Running Adapters</value>
   </data>
-   <data name="TEXT_BILL_GROUP" xml:space="preserve">
+  <data name="TEXT_BILL_GROUP" xml:space="preserve">
     <value>Bill Group</value>
   </data>
   <data name="TEXT_CYCLE" xml:space="preserve">
@@ -152,23 +152,41 @@
   </data>
   <data name="TEXT_END" xml:space="preserve">
     <value>End</value>
-  </data>  
+  </data>
   <data name="TEXT_INSTANCE" xml:space="preserve">
     <value>Instance</value>
-  </data> 
+  </data>
   <data name="TEXT_INTERVAL_ID" xml:space="preserve">
     <value>Interval ID</value>
   </data>
   <data name="TEXT_MESSAGE" xml:space="preserve">
     <value>Message</value>
-  </data> 
+  </data>
   <data name="TEXT_NAME" xml:space="preserve">
     <value>Name</value>
-  </data>  
+  </data>
   <data name="TEXT_START" xml:space="preserve">
     <value>Start</value>
-  </data>  
+  </data>
   <data name="TEXT_STATUS" xml:space="preserve">
     <value>Status</value>
-  </data> 	
+  </data>
+  <data name="pnlFailedTransactionsQueueResource.Text" xml:space="preserve">
+    <value>Failed Transactions Queue</value>
+  </data>
+  <data name="TEXT_OPEN" xml:space="preserve">
+    <value>Open</value>
+  </data>
+  <data name="TEXT_UNDER_INVESTIGATION" xml:space="preserve">
+    <value>Under Investigation</value>
+  </data>
+  <data name="TEXT_DAYS" xml:space="preserve">
+    <value>Days</value>
+  </data>
+  <data name="TEXT_LAST_BATCH" xml:space="preserve">
+    <value>Last Batch</value>
+  </data>
+  <data name="TEXT_OVER" xml:space="preserve">
+    <value>Over</value>
+  </data>
 </root>
