FEAT-4032 [DEV] Create frontend controls for quote details view

--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -265,13 +265,13 @@
     <value>ICB for group subscriptions will not be applied (current limitation)</value>
   </data>
   <data name="MTPanelLog.Text" xml:space="preserve">
-    <value>Quote Log</value>
+    <value>Quote Log / Failed Message</value>
   </data>
   <data name="MTPanelResult.Text" xml:space="preserve">
     <value>Quote Details</value>
   </data>
   <data name="QuoteFailed.Label" xml:space="preserve">
-    <value>Failed message</value>
+    <value>Failed Message</value>
   </data>
   <data name="QuoteLog.Label" xml:space="preserve">
     <value>Quote Log</value>
