--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es-MX.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es-MX.resx
@@ -189,4 +189,25 @@
   <data name="TEXT_OVER" xml:space="preserve">
     <value>{ES-MX}Over</value>
   </data>
+  <data name="pnlPricingQueue.Text" xml:space="preserve">
+    <value>{ES-MX}Pricing Queue</value>
+  </data>
+  <data name="TEXT_PIPELINE_QUEUE" xml:space="preserve">
+    <value>{ES-MX}Pipeline Queue</value>
+  </data>
+  <data name="TEXT_RAMP_QUEUE" xml:space="preserve">
+    <value>{ES-MX}RAMP Queue</value>
+  </data>
+  <data name="TEXT_SCHEDULER_QUEUE" xml:space="preserve">
+    <value>{ES-MX}Scheduler Queue</value>
+  </data>
+  <data name="TEXT_MESSAGES_WAITING_TO_BE_ASSIGNED" xml:space="preserve">
+    <value>{ES-MX}messages waiting to be assigned</value>
+  </data>
+   <data name="TEXT_MESSAGES_WAITING_IN_RABBITMQ" xml:space="preserve">
+    <value>{ES-MX}messages waiting in RabbitMQ</value>
+  </data>
+  <data name="TEXT_TASKS_WAITING_TO_BE_PROCESSED" xml:space="preserve">
+    <value>{ES-MX}tasks waiting to be processed</value>
+  </data>
 </root>
