FEAT-3853 Bling: Productize 'System User Reports' install and some reports
FEAT-4082
Localization support of text in Report page

--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -1262,8 +1262,17 @@
   </data>
   <data name="ACCOUNT_INVOICE_GRAPH_TEXT" xml:space="preserve">
     <value>[de] Invoice</value>
-  </data>  
+  </data>
   <data name="ACCOUNT_FAILED_TRANSACTIONS_TEXT" xml:space="preserve">
     <value>[de] Failed Transactions</value>
-  </data>   
+  </data>
+  <data name="REPORTS_TREE_HEADER_DESCRIPTION" xml:space="preserve">
+    <value>(GERMAN) Description</value>
+  </data>
+  <data name="REPORTS_TREE_HEADER_NAME" xml:space="preserve">
+    <value>(GERMAN) Name</value>
+  </data>
+  <data name="REPORTS_TREE_NOT_APPLICABLE_TEXT" xml:space="preserve">
+    <value>(GERMAN) N/A</value>
+  </data>
 </root>
