--- a/App_GlobalResources/JSConsts.resx
+++ b/App_GlobalResources/JSConsts.resx
@@ -1232,5 +1232,14 @@
   </data>
   <data name="ACCOUNT_FAILED_TRANSACTIONS_TEXT" xml:space="preserve">
     <value>Failed Transactions</value>
-  </data>  
+  </data>
+  <data name="REPORTS_TREE_HEADER_DESCRIPTION" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="REPORTS_TREE_HEADER_NAME" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="REPORTS_TREE_NOT_APPLICABLE_TEXT" xml:space="preserve">
+    <value>N/A</value>
+  </data>
 </root>
