--- a/Quoting/App_LocalResources/CreateQuote.aspx.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.resx
@@ -135,6 +135,9 @@
   <data name="MTCheckBoxPdfResource.Text" xml:space="preserve">
     <value>Generate PDF report</value>
   </data>
+  <data name="MTCheckBoxPdfResource.BoxLabel" xml:space="preserve">
+    <value>Generate PDF report</value>
+  </data>
   <data name="MTTextBoxControlQuoteDescriptionResource.Text" xml:space="preserve">
     <value>Quote Description</value>
   </data>
@@ -278,5 +281,32 @@
   </data>
   <data name="QuoteLog.Label" xml:space="preserve">
     <value>Quote Log</value>
+  </data>
+  <data name="MTPanelUDRCandICBResource.Text" xml:space="preserve">
+    <value>UDRC metrics and ICBs</value>
+  </data>
+  <data name="MTdpCreationDateResource.Label" xml:space="preserve">
+    <value>Creation Date</value>
+  </data>
+  <data name="MTTextBoxControlStatusResource.Label" xml:space="preserve">
+    <value>Quote Status</value>
+  </data>
+  <data name="MTTextBoxControlGroupResource.Label" xml:space="preserve">
+    <value>Group Subscription</value>
+  </data>
+  <data name="MTTextBoxControlTotalResource.Label" xml:space="preserve">
+    <value>Total Amount</value>
+  </data>
+  <data name="MTTextBoxControlTotalTaxResource.Label" xml:space="preserve">
+    <value>Total Tax</value>
+  </data>
+  <data name="MTtbQuoteIdentifierResource.Label" xml:space="preserve">
+    <value>Quote Identifier</value>
+  </data>
+  <data name="MTtbQuoteDescriptionResource.Label" xml:space="preserve">
+    <value>Quote Description</value>
+  </data>
+  <data name="REPORT_LINK_TEXT" xml:space="preserve">
+    <value>PDF report for quote</value>
   </data>
 </root>
