--- a/Account/App_LocalResources/AccountLandingPage.aspx.en-GB.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.en-GB.resx
@@ -171,4 +171,10 @@
   <data name="SUBSCRIPTION_JOIN_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
     <value>Add this account as a member of an existing Group Subscription</value>
   </data>      
+  <data name="SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
+    <value>Subscription</value>
+  </data>      
+  <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
+    <value>Group Subscription</value>
+  </data>          
 </root>
