--- a/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
@@ -171,4 +171,10 @@
   <data name="SUBSCRIPTION_JOIN_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
     <value>[fr] Add this account as a member of an existing Group Subscription</value>
   </data>      
+  <data name="SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
+    <value>[fr] Subscription</value>
+  </data>      
+  <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
+    <value>[fr] Group Subscription</value>
+  </data>          
 </root>
