--- a/Account/App_LocalResources/AccountLandingPage.aspx.en-GB.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.en-GB.resx
@@ -177,4 +177,10 @@
   <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
     <value>Group Subscription</value>
   </data>          
+  <data name="INVOICE_ITEM_TEXT" xml:space="preserve">
+    <value>Invoice</value>
+  </data>      
+  <data name="PAYMENT_ITEM_TEXT" xml:space="preserve">
+    <value>Payment</value>
+  </data>            
 </root>
