--- a/Account/App_LocalResources/AccountLandingPage.aspx.es-MX.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.es-MX.resx
@@ -177,4 +177,10 @@
   <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
     <value>[es-MX] Group Subscription</value>
   </data>           
+  <data name="INVOICE_ITEM_TEXT" xml:space="preserve">
+    <value>[es-MX] Invoice</value>
+  </data>      
+  <data name="PAYMENT_ITEM_TEXT" xml:space="preserve">
+    <value>[es-MX] Payment</value>
+  </data>            
 </root>
