--- a/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
@@ -177,4 +177,10 @@
   <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
     <value>[fr] Group Subscription</value>
   </data>          
+  <data name="INVOICE_ITEM_TEXT" xml:space="preserve">
+    <value>[fr] Invoice</value>
+  </data>      
+  <data name="PAYMENT_ITEM_TEXT" xml:space="preserve">
+    <value>[fr] Payment</value>
+  </data>            
 </root>
