--- a/Reporting/App_LocalResources/ShowConfiguredReport.aspx.en-GB.resx
+++ b/Reporting/App_LocalResources/ShowConfiguredReport.aspx.en-GB.resx
@@ -120,4 +120,13 @@
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
     <value>Report</value>
   </data>
+  <data name="TEXT_INTERVALS_TO_ARCHIVE_DT_END" xml:space="preserve">
+    <value>End Date</value>
+  </data>
+  <data name="TEXT_INTERVALS_TO_ARCHIVE_DT_START" xml:space="preserve">
+    <value>Start Date</value>
+  </data>
+  <data name="TEXT_INTERVALS_TO_ARCHIVE_ID_INTERVAL" xml:space="preserve">
+    <value>Interval ID</value>
+  </data>
 </root>
