--- a/Reporting/App_LocalResources/ShowConfiguredReport.aspx.fr.resx
+++ b/Reporting/App_LocalResources/ShowConfiguredReport.aspx.fr.resx
@@ -120,4 +120,13 @@
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
     <value>(FRENCH) Report</value>
   </data>
+  <data name="TEXT_INTERVALS_TO_ARCHIVE_DT_END" xml:space="preserve">
+    <value>(FRENCH) End Date</value>
+  </data>
+  <data name="TEXT_INTERVALS_TO_ARCHIVE_DT_START" xml:space="preserve">
+    <value>(FRENCH) Start Date</value>
+  </data>
+  <data name="TEXT_INTERVALS_TO_ARCHIVE_ID_INTERVAL" xml:space="preserve">
+    <value>(FRENCH) Interval ID</value>
+  </data>
 </root>
