--- a/Quoting/App_LocalResources/CreateQuote.aspx.en-GB.resx
+++ b/Quoting/App_LocalResources/CreateQuote.aspx.en-GB.resx
@@ -330,4 +330,7 @@
   <data name="REPORT_LINK_TEXT" xml:space="preserve">
     <value>PDF report for quote</value>
   </data>
+  <data name="TEXT_ISGROUP_CHEKED" xml:space="preserve">
+    <value>Corporate account for group subscription should be selected.</value>
+  </data>
 </root>
