--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.ja.resx
@@ -204,10 +204,19 @@
   <data name="TEXT_MESSAGES_WAITING_TO_BE_ASSIGNED" xml:space="preserve">
     <value>{JA}messages waiting to be assigned</value>
   </data>
-   <data name="TEXT_MESSAGES_WAITING_IN_RABBITMQ" xml:space="preserve">
+  <data name="TEXT_MESSAGES_WAITING_IN_RABBITMQ" xml:space="preserve">
     <value>{JA}messages waiting in RabbitMQ</value>
   </data>
   <data name="TEXT_TASKS_WAITING_TO_BE_PROCESSED" xml:space="preserve">
     <value>{JA}tasks waiting to be processed</value>
+  </data>
+  <data name="pnlBatchUsageResource.Text" xml:space="preserve">
+    <value>{JA}Usage Data Records</value>
+  </data>
+  <data name="TEXT_BATCHES" xml:space="preserve">
+    <value>{JA}Batches</value>
+  </data>
+  <data name="TEXT_UDRS" xml:space="preserve">
+    <value>{JA}UDRs</value>
   </data>
 </root>
