--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.resx
@@ -187,7 +187,7 @@
     <value>Last Batch</value>
   </data>
   <data name="TEXT_OVER" xml:space="preserve">
-    <value>Over</value>	
+    <value>Over</value>
   </data>
   <data name="pnlPricingQueue.Text" xml:space="preserve">
     <value>Pricing Queue</value>
@@ -204,10 +204,19 @@
   <data name="TEXT_MESSAGES_WAITING_TO_BE_ASSIGNED" xml:space="preserve">
     <value>messages waiting to be assigned</value>
   </data>
-   <data name="TEXT_MESSAGES_WAITING_IN_RABBITMQ" xml:space="preserve">
+  <data name="TEXT_MESSAGES_WAITING_IN_RABBITMQ" xml:space="preserve">
     <value>messages waiting in RabbitMQ</value>
   </data>
   <data name="TEXT_TASKS_WAITING_TO_BE_PROCESSED" xml:space="preserve">
     <value>tasks waiting to be processed</value>
-  </data>   
+  </data>
+  <data name="pnlBatchUsageResource.Text" xml:space="preserve">
+    <value>Usage Data Records</value>
+  </data>
+  <data name="TEXT_BATCHES" xml:space="preserve">
+    <value>Batches</value>
+  </data>
+  <data name="TEXT_UDRS" xml:space="preserve">
+    <value>UDRs</value>
+  </data>
 </root>
