--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.de.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.de.resx
@@ -219,4 +219,37 @@
   <data name="TEXT_UDRS" xml:space="preserve">
     <value>{DE}UDRs</value>
   </data>
+  <data name="pnlActiveBillRun.Text" xml:space="preserve">
+    <value>{DE}Active Bill Run</value>
+  </data>
+  <data name="TEXT_3_MONTH_AVERAGE" xml:space="preserve">
+    <value>{DE}3 Month Average</value>
+  </data>
+  <data name="TEXT_ADAPTER" xml:space="preserve">
+    <value>{DE}Adapter</value>
+  </data>
+  <data name="TEXT_CURRENT_RUN" xml:space="preserve">
+    <value>{DE}Current Run</value>
+  </data>
+  <data name="TEXT_CURRENT_VS_3_MONTH_AVERAGE" xml:space="preserve">
+    <value>{DE}Current vs 3 Month Average</value>
+  </data>
+  <data name="TEXT_DURATION" xml:space="preserve">
+    <value>{DE}Duration</value>
+  </data>
+  <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
+    <value>{DE}Earliest ETA</value>
+  </data>
+  <data name="TEXT_READY" xml:space="preserve">
+    <value>{DE}Ready</value>
+  </data>
+  <data name="TEXT_SUCCESSFUL" xml:space="preserve">
+    <value>{DE}Successful</value>
+  </data>
+  <data name="TEXT_VARIANCE" xml:space="preserve">
+    <value>{DE}Variance</value>
+  </data>
+  <data name="TEXT_WAITING" xml:space="preserve">
+    <value>{DE}Waiting</value>
+  </data>
 </root>
