--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.en-GB.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.en-GB.resx
@@ -219,4 +219,37 @@
   <data name="TEXT_UDRS" xml:space="preserve">
     <value>UDRs</value>
   </data>
+  <data name="pnlActiveBillRun.Text" xml:space="preserve">
+    <value>Active Bill Run</value>
+  </data>
+  <data name="TEXT_3_MONTH_AVERAGE" xml:space="preserve">
+    <value>3 Month Average</value>
+  </data>
+  <data name="TEXT_ADAPTER" xml:space="preserve">
+    <value>Adapter</value>
+  </data>
+  <data name="TEXT_CURRENT_RUN" xml:space="preserve">
+    <value>Current Run</value>
+  </data>
+  <data name="TEXT_CURRENT_VS_3_MONTH_AVERAGE" xml:space="preserve">
+    <value>Current vs 3 Month Average</value>
+  </data>
+  <data name="TEXT_DURATION" xml:space="preserve">
+    <value>Duration</value>
+  </data>
+  <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
+    <value>Earliest ETA</value>
+  </data>
+  <data name="TEXT_READY" xml:space="preserve">
+    <value>Ready</value>
+  </data>
+  <data name="TEXT_SUCCESSFUL" xml:space="preserve">
+    <value>Successful</value>
+  </data>
+  <data name="TEXT_VARIANCE" xml:space="preserve">
+    <value>Variance</value>
+  </data>
+  <data name="TEXT_WAITING" xml:space="preserve">
+    <value>Waiting</value>
+  </data>
 </root>
