--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es-MX.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.es-MX.resx
@@ -219,4 +219,37 @@
   <data name="TEXT_UDRS" xml:space="preserve">
     <value>{ES-MX}UDRs</value>
   </data>
+  <data name="pnlActiveBillRun.Text" xml:space="preserve">
+    <value>{ES-MX}Active Bill Run</value>
+  </data>
+  <data name="TEXT_3_MONTH_AVERAGE" xml:space="preserve">
+    <value>{ES-MX}3 Month Average</value>
+  </data>
+  <data name="TEXT_ADAPTER" xml:space="preserve">
+    <value>{ES-MX}Adapter</value>
+  </data>
+  <data name="TEXT_CURRENT_RUN" xml:space="preserve">
+    <value>{ES-MX}Current Run</value>
+  </data>
+  <data name="TEXT_CURRENT_VS_3_MONTH_AVERAGE" xml:space="preserve">
+    <value>{ES-MX}Current vs 3 Month Average</value>
+  </data>
+  <data name="TEXT_DURATION" xml:space="preserve">
+    <value>{ES-MX}Duration</value>
+  </data>
+  <data name="TEXT_EARLIEST_ETA" xml:space="preserve">
+    <value>{ES-MX}Earliest ETA</value>
+  </data>
+  <data name="TEXT_READY" xml:space="preserve">
+    <value>{ES-MX}Ready</value>
+  </data>
+  <data name="TEXT_SUCCESSFUL" xml:space="preserve">
+    <value>{ES-MX}Successful</value>
+  </data>
+  <data name="TEXT_VARIANCE" xml:space="preserve">
+    <value>{ES-MX}Variance</value>
+  </data>
+  <data name="TEXT_WAITING" xml:space="preserve">
+    <value>{ES-MX}Waiting</value>
+  </data>
 </root>
