--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
@@ -276,4 +276,19 @@
   <data name="TEXT_UNGUIDED" xml:space="preserve">
     <value>{FR}Unguided</value>
   </data>
+  <data name="pnlPricingBacklog.Text" xml:space="preserve">
+    <value>{FR}Pricing Engine (Real-Time and Batch)</value>
+  </data>
+  <data name="TEXT_PIPELINE_WAIT_DURATION" xml:space="preserve">
+    <value>{FR}Pipeline Wait Duration</value>
+  </data>
+  <data name="TEXT_PIPELINE_PROCESSING_DURATION" xml:space="preserve">
+    <value>{FR}Pipeline Processing Duration</value>
+  </data>
+  <data name="TEXT_SECONDS_PROCESSING_IN_PIPELINE" xml:space="preserve">
+    <value>{FR}seconds processing in the pipeline </value>
+  </data>
+  <data name="TEXT_SECONDS_WAITING_TO_BE_ASSIGNED" xml:space="preserve">
+    <value>{FR}seconds waiting to be assigned</value>
+  </data>
 </root>
