Fixes for System User Reports
FEAT-3853
Bling: Productize 'System User Reports' install and some reports

--- a/App_GlobalResources/MainMenu.en-GB.resx
+++ b/App_GlobalResources/MainMenu.en-GB.resx
@@ -612,4 +612,7 @@
   <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
     <value>Product Dashboard</value>
   </data>
+  <data name="TEXT_REPORTS" xml:space="preserve">
+    <value>Reports</value>
+  </data>  
 </root>
