--- a/App_GlobalResources/MainMenu.de.resx
+++ b/App_GlobalResources/MainMenu.de.resx
@@ -612,4 +612,7 @@
   <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
     <value>[de]Product Dashboard</value>
   </data>
+  <data name="TEXT_REPORTS" xml:space="preserve">
+    <value>[de] Reports</value>
+  </data>  
 </root>
