--- a/App_GlobalResources/MainMenu.it.resx
+++ b/App_GlobalResources/MainMenu.it.resx
@@ -612,4 +612,7 @@
   <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
     <value>[it]Product Dashboard</value>
   </data>
+  <data name="TEXT_REPORTS" xml:space="preserve">
+    <value>[it] Reports</value>
+  </data> 
 </root>
